force-app/main/default/objects/Refund_Ticket_Number__c/Refund_Ticket_Number__c.object-meta.xml
<CustomObject>
    <label>Refund Ticket Number</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Ticket Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Ticket Number</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>