force-app/main/default/objects/Refund_Ticket_Number__c/fields/Base_Fare__c.field-meta.xml
<CustomField>
    <fullName>Base_Fare__c</fullName>
    <label>Base Fare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>