force-app/main/default/objects/Refund_Ticket_Number__c/fields/BSC__c.field-meta.xml
<CustomField>
    <fullName>BSC__c</fullName>
    <label>BSC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>