force-app/main/default/objects/Refund_Ticket_Number__c/fields/Case_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Case_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Not Found</label>
    <type>Checkbox</type>
</CustomField>