force-app/main/default/objects/Refund_Ticket_Number__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Refund Ticket Number</relationshipLabel>
    <relationshipName>Refund_Ticket_Number</relationshipName>
    <type>Lookup</type>
</CustomField>