force-app/main/default/objects/Refund_Ticket_Number__c/fields/Countable_seats_for_Usage_Formula__c.field-meta.xml
<CustomField>
    <fullName>Countable_seats_for_Usage_Formula__c</fullName>
    <formula>SAT__r.Case_ID__r.Countable_seats_for_Usage_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Countable seats for Usage Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>