force-app/main/default/objects/Refund_Ticket_Number__c/fields/Departing_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Departing_Flight_Date__c</fullName>
    <formula>SAT__r.Departing_Flight_Date__c</formula>
    <label>Departing Flight Date</label>
    <type>Date</type>
</CustomField>