force-app/main/default/objects/Refund_Ticket_Number__c/fields/Need_Approval__c.field-meta.xml
<CustomField>
    <fullName>Need_Approval__c</fullName>
    <formula>OR(
ISPICKVAL( Refund_Condition__c , &quot;Waive Refund Fee&quot;),
ISPICKVAL( Refund_Condition__c , &quot;Waive No Show Fee&quot;),
ISPICKVAL( Refund_Condition__c , &quot;Waive Refund Fee &amp; No Show Fee&quot;),
ISPICKVAL( Refund_Condition__c , &quot;Full Refund&quot;),
ISPICKVAL( Refund_Condition__c , &quot;Others&quot;)
)</formula>
    <label>Need Approval</label>
    <type>Checkbox</type>
</CustomField>