force-app/main/default/objects/Refund_Ticket_Number__c/fields/Refund_Condition__c.field-meta.xml
<CustomField>
    <fullName>Refund_Condition__c</fullName>
    <label>Refund Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>General Refund</fullName>
            </value>
            <value>
                <fullName>Waive Refund Fee</fullName>
            </value>
            <value>
                <fullName>Waive No Show Fee</fullName>
            </value>
            <value>
                <fullName>Waive Refund Fee &amp; No Show Fee</fullName>
            </value>
            <value>
                <fullName>Refund Tax Only</fullName>
            </value>
            <value>
                <fullName>Refund Returning Tax Only</fullName>
            </value>
            <value>
                <fullName>Full Refund</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>