force-app/main/default/objects/Refund_Ticket_Number__c/fields/Refund_Condition_Details__c.field-meta.xml
<CustomField>
    <fullName>Refund_Condition_Details__c</fullName>
    <formula>Case( Refund_Condition__c,
&quot;General Refund&quot;, &quot;Base Fare + Tax - BSC - Refund Fee&quot;,
&quot;Waive Refund Fee&quot;, &quot;Base Fare + Tax - BSC&quot;,
&quot;Waive No Show Fee&quot;, &quot;Base Fare + Tax - BSC - Refund Fee&quot;,
&quot;Waive Refund Fee &amp; No Show Fee&quot;, &quot;Base Fare + Tax - BSC&quot;,
&quot;Refund Tax Only&quot;, &quot;Tax - BSC&quot;,
&quot;Full Refund&quot;, &quot;Base Fare + Tax&quot;,
&quot;None&quot;)</formula>
    <label>Refund Condition Details</label>
    <type>Text</type>
</CustomField>