force-app/main/default/objects/Refund_Ticket_Number__c/fields/Refund_Fee__c.field-meta.xml
<CustomField>
    <fullName>Refund_Fee__c</fullName>
    <label>Refund Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>4500</fullName>
            </value>
            <value>
                <fullName>6000</fullName>
            </value>
            <value>
                <fullName>7500</fullName>
            </value>
            <value>
                <fullName>10000</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>450</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>750</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>