force-app/main/default/objects/Refund_Ticket_Number__c/fields/Refund_Order__c.field-meta.xml
<CustomField>
    <fullName>Refund_Order__c</fullName>
    <label>Refund Order</label>
    <referenceTo>Group_Ticket_Refund_Order__c</referenceTo>
    <relationshipLabel>Refund Ticket Number</relationshipLabel>
    <relationshipName>Refund_Ticket_Number</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>