force-app/main/default/objects/Refund_Ticket_Number__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>行前取消</fullName>
            </value>
            <value>
                <fullName>身體不適</fullName>
            </value>
            <value>
                <fullName>家喪</fullName>
            </value>
            <value>
                <fullName>個人因素</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>