force-app/main/default/objects/Refund_Ticket_Number__c/fields/Refund_Reason_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason_Remarks__c</fullName>
    <label>Refund Reason Remarks</label>
    <type>TextArea</type>
</CustomField>