force-app/main/default/objects/Refund_Ticket_Number__c/fields/SAT__c.field-meta.xml
<CustomField>
    <fullName>SAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAT</label>
    <referenceTo>Seat_Allocation_and_Ticketing__c</referenceTo>
    <relationshipLabel>Refund Ticket Number</relationshipLabel>
    <relationshipName>Refund_Ticket_Number</relationshipName>
    <type>Lookup</type>
</CustomField>