force-app/main/default/objects/Refund_Ticket_Number__c/fields/Special_Refund_Amount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Special_Refund_Amount_Reason__c</fullName>
    <label>Special Refund Amount Reason</label>
    <type>TextArea</type>
</CustomField>