force-app/main/default/objects/Refund_Ticket_Number__c/fields/TKT_Status__c.field-meta.xml
<CustomField>
    <fullName>TKT_Status__c</fullName>
    <label>TKT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>