force-app/main/default/objects/Refund_Ticket_Number__c/fields/Total_Final_Sales_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_Final_Sales_Seats__c</fullName>
    <formula>Case_Number__r.Total_Final_Sales_Seats__c</formula>
    <label>Total Final Sales Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>