force-app/main/default/objects/Refund_Ticket_Number__c/fields/Total_Refund_Amount_System__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund_Amount_System__c</fullName>
    <label>Total Refund Amount (System)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>