force-app/main/default/objects/Refund_Ticket_Number__c/fields/Travel_Agency__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Refund Ticket Number</relationshipLabel>
    <relationshipName>Refund_Ticket_Number</relationshipName>
    <type>Lookup</type>
</CustomField>