force-app/main/default/objects/Refund_Ticket_Number__c/fields/Travel_Agent_s_Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agent_s_Refund_Reason__c</fullName>
    <label>Travel Agent&apos;s Refund Reason</label>
    <type>TextArea</type>
</CustomField>