force-app/main/default/objects/Refund_Ticket_Number__c/validationRules/Manual_input_fare_and_tax_and_BSC.validationRule-meta.xml
<ValidationRule>
    <fullName>Manual_input_fare_and_tax_and_BSC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( Refund_Condition__c , &quot;New&quot;)),
NOT(ISPICKVAL( Refund_Condition__c , &quot;Denied&quot;)),
OR( 
ISBLANK( Base_Fare__c ),
ISBLANK( Tax__c ) ,
ISBLANK( BSC__c ))
)</errorConditionFormula>
    <errorMessage>Please input Base Fare, Tax and BSC.</errorMessage>
</ValidationRule>