force-app/main/default/objects/Refund_Ticket_Number__c/validationRules/Max_Refund_Ticket.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Refund_Ticket</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Refund_Order__r.Total_Tickets__c &gt; 9,
$Profile.Name = &quot;B2B Travel Agent Community Plus&quot;
)</errorConditionFormula>
    <errorMessage>Reached maximum 10 Refund Tickets. Please create another Refund Order.</errorMessage>
</ValidationRule>