force-app/main/default/objects/Refund_Ticket_Number__c/validationRules/Refund_Order_Status_Is_Not_Applicable.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Order_Status_Is_Not_Applicable</fullName>
    <active>true</active>
    <errorConditionFormula>OR(

AND(
NOT(ISPICKVAL( Refund_Order__r.Status__c , &quot;Request for Refund&quot;) ),OR(
$Profile.Name = &quot;B2B Data Administrator&quot;,
$Profile.Name = &quot;B2B Sales Agent&quot;,
$Profile.Name = &quot;B2B Sales Director&quot;,
$Profile.Name = &quot;B2B Sales Manager&quot;)
),
AND(
NOT(ISPICKVAL( Refund_Order__r.Status__c , &quot;New&quot;) ),
$Profile.Name = &quot;B2B Travel Agent Community Plus&quot;)
)</errorConditionFormula>
    <errorMessage>Can not edit data in current Refund Order &quot;Status&quot;.</errorMessage>
</ValidationRule>