force-app/main/default/objects/Refund_Ticket_Number__c/validationRules/Ticket_Number_Can_Not_Be_Amended.validationRule-meta.xml
<ValidationRule>
    <fullName>Ticket_Number_Can_Not_Be_Amended</fullName>
    <active>true</active>
    <description>Ticket Number can&apos;t be amended.</description>
    <errorConditionFormula>ISCHANGED(Ticket_Number__c)</errorConditionFormula>
    <errorDisplayField>Ticket_Number__c</errorDisplayField>
    <errorMessage>Ticket Number can&apos;t be amended.</errorMessage>
</ValidationRule>