force-app/main/default/objects/Refund_Ticket_Number__c/validationRules/TKT_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>TKT_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( TKT_Status__c , &quot;S&quot;) ,
NOT(ISPICKVAL( Refund_Condition__c , &quot;Waive No Show Fee&quot;)) ,
NOT(ISPICKVAL( Refund_Condition__c , &quot;Waive Refund Fee &amp; No Show Fee&quot;)) ,
NOT(ISPICKVAL( Refund_Condition__c , &quot;Denied&quot;)),
NOT(ISPICKVAL( Refund_Condition__c , &quot;New&quot;)),
NOT(ISPICKVAL( Refund_Condition__c , &quot;Others&quot;))
)</errorConditionFormula>
    <errorDisplayField>Refund_Condition__c</errorDisplayField>
    <errorMessage>Refund Condition is not acceptable for current TKT Status.</errorMessage>
</ValidationRule>