force-app/main/default/objects/Refund_Ticket_Number__c/validationRules/When_JX_Remarks_is_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>When_JX_Remarks_is_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISBLANK( Refund_Reason_Remarks__c ) ,
 ISPICKVAL( Refund_Reason__c , &quot;其他&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Refund_Reason_Remarks__c</errorDisplayField>
    <errorMessage>Remarks is needed.</errorMessage>
</ValidationRule>